# sign-language-translator

./: .gitignore  LICENSE  README.md  main.py  phase1.ipynb  pyproject.toml
notebooks/: dataset_stats.pt  phase1&2.ipynb  phase1.ipynb
src/sign_translator/: app.py  config.py  contracts.py  labels.py
src/sign_translator/decoding/: label_handler.py  sequence_finalizer.py  temporal_decoder.py  text_buffer.py
src/sign_translator/inference/: base.py  factory.py  keras_predictor.py  mock.py  output_decoder.py  preprocessing.py  torch_model.py  torch_predictor.py
src/sign_translator/speech/: base.py  factory.py  noop.py  pyttsx3_engine.py
src/sign_translator/vision/: camera.py  overlay.py  roi.py
tests/: test_keras_predictor.py  test_label_handler.py  test_mock_predictor.py  test_output_decoder.py  test_preprocessing.py  test_roi.py  test_sequence_finalizer.py  test_temporal_decoder.py  test_text_buffer.py
